# CppDeepSeek

./: .gitignore  Article.md  CMakeLists.txt  CliOptions.hpp  DeepSeekClient.cpp  DeepSeekClient.hpp  LocalBackend.hpp  LogicGate.hpp  README.md  Readme.md  b  demo.sh
.github/workflows/: ci.yml
include/: AgentRuntime.hpp  CliOptions.hpp
modelstore/: CMakeLists.txt  README.md
scripts/: install_deps.sh
src/: AgentRuntime.cpp  CliOptions.cpp  DeepSeekClient.cpp  LlamaBackend.cpp  LocalBackend.cpp  LogicGate.cpp  main.cpp
tests/: AgentPersistenceTests.cpp  AgentRuntimeTests.cpp  CliOptionsTests.cpp  LocalBackendTests.cpp  LogicGateTests.cpp
